# ast

./: LICENSE.txt  Make0  Makefile.am  README.md  README.txt  UNIMPLEMENTED.txt  ast.iws  build.xml  configure  configure.ac
doc/: astinternals.html  astuserman.html
ignore/: Primtests.java
intellij/: ast.iws
obsolete/runtime/: Ibuffer.java  Internal.java  Lbuffer.java  XDREncoding.java
src/ast/compiler/: AST.java  ASTFactory.java  ASTFactoryDefault.java  Debug.java  Generator.java  Main.java  Make0  Printer.java  ProtobufActions.java  ProtobufLexer.java  ProtobufParser.java  Semantics.java  Util.java  build.xml  protobuf.y  t.proto
src/ast/test/: Diff.java  Make0  TestAST.java  TestFiles.java
src/ast/test/testdata1/: addressbook.ast
src/compiler/: A.java  AST.java  ASTDefault.java  ASTFactory.java  ASTFactoryDefault.java  AuxFcns.java  CGenerator.java  CSemantics.java  CmdLineParser.java  Debug.java  Generator.java  JavaGenerator.java  Main.java  Make0  Printer.java  ProtobufActions.java  ProtobufLexer.java  ProtobufParser.java  ProtobufSemantics.java  Semantics.java  Util.java  ast_byteio.c  ast_runtime.c  ast_runtime.h  license.txt  ncStreamx.proto  ncstream.c  ncstreamx.proto  protobuf.y  t.proto  testast.c  testprim4.c
src/cpp/: Java.java  c_edf.h  edf_common.h  edf_enum.cc  edf_field.h  edf_file.cc  edf_generator.h  edf_helpers.cc  edf_message.cc  edf_message.h  edf_message_field.cc  edf_message_field.h  edf_string_field.cc  edf_string_field.h  ef  junk  manifest  t.pb.c  t.pb.h  t.proto
src/java/: JG.java  JavaGenerator.java  Makefile  c_edf.cc  edf_enum.h  edf_enum_field.cc  edf_enum_field.h  edf_extension.cc  edf_extension.h  edf_field.cc  edf_file.h  edf_generator.cc  edf_helpers.h  edf_primitive_field.cc  edf_primitive_field.h  main.cc  printer.cc  printer.h  sedfix  t.c  t.h
src/main/c/: Makefile.am  ast.h  ast_runtime.h
src/main/c/.deps/: ast_byteio.Plo  ast_curl.Plo  ast_debug.Plo  ast_internal.Plo  ast_runtime.Plo  ast_util.Plo
src/main/c/runtime/: Makefile.am  ast.h  ast_byteio.c  ast_byteio.h  ast_curl.c  ast_debug.c  ast_debug.h  ast_encoding.h  ast_internal.h  ast_protobuf.c  ast_runtime.c  ast_runtime.h  ast_util.c  ast_xdr.c
src/main/java/ast/c/: CGenerator.java
src/main/java/ast/compiler/: AST.java  Main.java  ProtobufSemantics.java
src/main/java/unidata/ast/compiler/: Main.java  ProtobufSemantics.java  issues
src/main/java/unidata/ast/compiler/generators/c/: CGenerator.java
src/main/java/unidata/ast/compiler/generators/java/: JavaGenerator.java  JavaSemantics.java
src/main/java/unidata/ast/runtime/: ASTRuntime.java  ProtobufEncoding.java
src/test/: Diff.java  Main.java  TestAST.java  TestFiles.java
src/test/c/: Bytetests.c  Bytetests.h  Enumtests.c  Enumtests.h  Makefile.am  Msgtests.c  Msgtests.h  Primtests.c  Primtests.h  testast.c
src/test/c/.deps/: Bytetests.Po  Enumtests.Po  Msgtests.Po  Primtests.Po  testast.Po
src/test/java/unidata/ast/test/: Bytetests.java  Enumtests.java  Msgtests.java  P.proto  Primtests.java  T.j  TestAst.java
src/test/resources/: Bytetests.proto  Primtests.proto
src/test/resources/c/: Bytetests.proto  Enumtests.proto  Msgtests.proto  Primtests.proto
src/test/testdata1/: addressbook.ast  addressbook.pp  descriptor.ast  descriptor.pp  example.ast  example.pp  more_extensions.ast  more_extensions.pp  more_messages.ast  more_messages.pp  plugin.ast  plugin.pp  plugin.proto  simplerpc.ast  simplerpc.pp  test-full.ast  test-full.pp  test.ast  test.pp  unittest.ast  unittest.pp  unittest.proto  unittest_custom_options.ast  unittest_custom_options.pp  unittest_custom_options.proto  unittest_embed_optimize_for.ast  unittest_embed_optimize_for.pp  unittest_embed_optimize_for.proto  unittest_empty.ast  unittest_empty.pp  unittest_enormous_descriptor.ast  unittest_enormous_descriptor.pp  unittest_import.ast  unittest_import.pp  unittest_import_lite.ast  unittest_import_lite.pp  unittest_lite.ast  unittest_lite.pp  unittest_lite.proto  unittest_lite_imports_nonlite.ast  (+9 more)
